--- a/Exercise 2 style.css
+++ b/Exercise 2 style.css
@@ -15,25 +15,18 @@ body {
   width: 300px;
   height: 300px;
   background-color: yellow;
-  position: relative;
-  top: 50px;
-  left: 50px;
 }
 
 .three {
   width: 200px;
   height: 200px;
   background-color: green;
-  position: relative;
-  top: 50px;
-  left: 50px;
 }
 
 .four {
   width: 100px;
   height: 100px;
   background-color: blue;
-  position: relative;
-  top: 50px;
-  left: 50px;
+  position: absolute;
+  right: 0px;
 }
