--- a/Exercise 3 style.css
+++ b/Exercise 3 style.css
@@ -9,31 +9,30 @@ body {
   width: 400px;
   height: 400px;
   background-color: red;
+  position: relative;
 }
 
 .two {
   width: 300px;
   height: 300px;
   background-color: yellow;
-  position: relative;
-  top: 50px;
-  left: 50px;
 }
 
 .three {
   width: 200px;
   height: 200px;
   background-color: green;
-  position: relative;
-  top: 50px;
-  left: 50px;
+  position: absolute;
+  left: 400px;
+  top: 200px;
 }
 
+/* why doesn't position relative work here?*/
 .four {
   width: 100px;
   height: 100px;
   background-color: blue;
-  position: relative;
-  top: 50px;
-  left: 50px;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
 }
