--- a/Exercise 4 style.css
+++ b/Exercise 4 style.css
@@ -9,15 +9,16 @@ body {
   width: 400px;
   height: 400px;
   background-color: red;
+  position: relative;
 }
 
 .two {
   width: 300px;
   height: 300px;
   background-color: yellow;
-  position: relative;
-  top: 50px;
-  left: 50px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 
 .three {
@@ -25,15 +26,16 @@ body {
   height: 200px;
   background-color: green;
   position: relative;
-  top: 50px;
-  left: 50px;
+  left: -100px;
+  top: -100px;
 }
 
+/* why doesn't position relative work here?*/
 .four {
   width: 100px;
   height: 100px;
   background-color: blue;
-  position: relative;
-  top: 50px;
-  left: 50px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
