--- a/Exercise 5 style.css
+++ b/Exercise 5 style.css
@@ -15,9 +15,9 @@ body {
   width: 300px;
   height: 300px;
   background-color: yellow;
-  position: relative;
-  top: 50px;
-  left: 50px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 
 .three {
@@ -25,15 +25,14 @@ body {
   height: 200px;
   background-color: green;
   position: relative;
-  top: 50px;
-  left: 50px;
+  top: -200px;
 }
 
 .four {
   width: 100px;
   height: 100px;
   background-color: blue;
-  position: relative;
-  top: 50px;
-  left: 50px;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
